# USV_ROS2_control

./: README.md  run_offboard.sh
px4_ros_com/: CMakeLists.txt
px4_ros_com/config/: offboard_control_boat.yaml
px4_ros_com/launch/: offboard_control_boat.launch.py
px4_ros_com/src/: test
px4_ros_com/src/myControl/: FSM.cpp  keyboard_input.cpp  mode_heading_stabilization.cpp  mode_idle.cpp  mode_point_stabilization.cpp  offboard_control_boat.cpp  offboard_control_boat.hpp
